fix: #31: fix z-index value

--- a/src/components/overlay/Overlay.scss
+++ b/src/components/overlay/Overlay.scss
@@ -2,7 +2,7 @@
 
 .overlay {
   position: fixed;
-  z-index: 71;
+  z-index: 80;
   display: flex;
   align-items: center;
   justify-content: center;
