--- a/src/pages/book/sections/modal-qr-form/ModalQRForm.scss
+++ b/src/pages/book/sections/modal-qr-form/ModalQRForm.scss
@@ -4,7 +4,7 @@
 
 .modal-qr-form {
   position: fixed;
-  z-index: 71;
+  z-index: 80;
   display: flex;
   align-items: center;
   justify-content: center;
